--- a/python/Dockerfile
+++ b/python/Dockerfile
@@ -93,7 +93,7 @@ RUN groupadd --gid 3434 circleci \
 # BEGIN IMAGE CUSTOMIZATIONS
 
 # Install pipenv and poetry
-RUN sudo pip install pipenv poetry
+RUN sudo pip install --no-cache pipenv poetry
 # END IMAGE CUSTOMIZATIONS
 
 USER circleci
