--- a/rust/Dockerfile
+++ b/rust/Dockerfile
@@ -4,7 +4,7 @@
 ### for a complete list of Dockerfiles for each tag/variant of this image
 ###
 
-FROM rust:1.36.0-stretch
+FROM rust:1.37.0-buster
 
 # make Apt non-interactive
 RUN echo 'APT::Get::Assume-Yes "true";' > /etc/apt/apt.conf.d/90circleci \
