--- a/android/Dockerfile
+++ b/android/Dockerfile
@@ -200,18 +200,8 @@ RUN sdkmanager \
   "build-tools;28.0.2" \
   "build-tools;28.0.3" \
   "build-tools;29.0.0" \
-  "build-tools;29.0.1"
+  "build-tools;29.0.1" \
+  "build-tools;29.0.2"
 
 # API_LEVEL string gets replaced by m4
-RUN sdkmanager "platforms;android-26"
-
-ARG ndk_version=android-ndk-r20
-ARG android_ndk_home=/opt/android/${ndk_version}
-
-# install NDK
-RUN curl --silent --show-error --location --fail --retry 3 --output /tmp/${ndk_version}.zip https://dl.google.com/android/repository/${ndk_version}-linux-x86_64.zip && \
-    sudo unzip -q /tmp/${ndk_version}.zip -d /opt/android && \
-    rm /tmp/${ndk_version}.zip && \
-    sudo chown -R circleci:circleci ${android_ndk_home}
-
-ENV ANDROID_NDK_HOME ${android_ndk_home}
+RUN sdkmanager "platforms;android-29"
