--- a/openjdk/Dockerfile
+++ b/openjdk/Dockerfile
@@ -4,7 +4,7 @@
 ### for a complete list of Dockerfiles for each tag/variant of this image
 ###
 
-FROM openjdk:14-ea-19-jdk-buster
+FROM openjdk:11.0.5-jdk-stretch
 
 # make Apt non-interactive
 RUN echo 'APT::Get::Assume-Yes "true";' > /etc/apt/apt.conf.d/90circleci \
