--- a/postgres/Dockerfile
+++ b/postgres/Dockerfile
@@ -4,9 +4,10 @@
 ### for a complete list of Dockerfiles for each tag/variant of this image
 ###
 
-FROM postgres:12.1
+FROM postgres:12.2
 
 ENV POSTGRES_DB=circle_test
+ENV POSTGRES_HOST_AUTH_METHOD=test
 
 # This is performance optimization tweak to make DB faster
 RUN if [ -e /usr/local/share/postgresql/postgresql.conf.sample ]; then \
